@@ -124,7 +124,8 @@ if ( !is_object($xoopsUser) || !is_object($xoopsModule) || !$xoopsUser->isAdmin(
                 $modperm->setVar('gperm_modid', 1);
                 $gperm_handler->insert($modperm);
             }
-            if ($g_id != 1 && $g_id != 3){
+            //if ($g_id != 1 && $g_id != 3){
+            if ($g_id != 3){
             	foreach ($useeditor_mids as $ed_mid) {
             		$modperm =& $gperm_handler->create();
             		$modperm->setVar('gperm_groupid', $groupid);
